--- a/content/principles/docs-as-code.adoc
+++ b/content/principles/docs-as-code.adoc
@@ -23,6 +23,16 @@ content reuse, snippets or include directives
 audience, reviews (SME and peer)
 
 plain text via GitHub PRs or as Word docs in SharePoint with track changes on.
+=== Reviews
+
+==== Subject Matter Expert (SME) review
+The tightest feedback loop should be between a SME and technical writer. This review ensures technical accuracy, proper order of operations, and prerequisites. This review can be completed prior to or as part of a GitHub Pull Request.
+
+==== Peer review
+Once the SME review is complete, other tech writers can evaluate the documentation for style guide adherence, proper information architecture, consistency in tone, grammar, and usage. This review should be completed as part of a GitHub Pull Request.
+
+==== Feature review
+Once a feature is nearing _feature complete_ status, a final review considering the opinion of key stakeholders (Product Management, Engineering, Professional Services, Support) should occur. This review will take into account higher-level feedback from a wider audience and serve as a jumping off point for training.
 
 == Testability
 
