--- a/content/tooling/text-editors.adoc
+++ b/content/tooling/text-editors.adoc
@@ -6,10 +6,13 @@ weight: 10
 date:
 ---
 
-== VS Code
+== Text editors
+a tech writer's livelihood!
+
+=== VS Code
 
 todo...
 
-== Vim
+=== Vim
 
 todo...
