--- a/content/writingsamples/feature.adoc
+++ b/content/writingsamples/feature.adoc
@@ -7,13 +7,20 @@ weight: -15
 :toc:
 
 == Feature docs
+what I like about feature docs...
 
+Explain RTFM-Industries... 
+
+== Conceptual feature docs
 === RTFM-Industries documentation dashboards (XHTML)
 
 View feature documentation for the fictional RTFM-Industries Documentation Dashboard feature.
 The following link:../../overview/#_topic_typing[concept documentation] introduces RTFM-Industries Documentation Dashboards, a splendid feature that helps tech writers do their jobs more effectively.
 
 NOTE: USE `INCLUDES::` to pull in this file...
+
+includes::https://github.com/technicallyawriter/portfolio/content/writing-samples/source/documentation-dashboards-overview.html[]
+
 [source,HTML]
 ----
 <body>
@@ -69,6 +76,8 @@ NOTE: USE `INCLUDES::` to pull in this file...
 </body>
 ----
 
+== Task-oriented feature docs
+
 === Create a new documentation dashboard (XHTML)
 
 The following link:../../overview/#_topic_typing[task] instructs users how to create a new Documentation Dashboard that evaluates the effectiveness of published documentation.
@@ -109,7 +118,7 @@ The following link:../../overview/#_topic_typing[task] instructs users how to cr
 </body>
 ---- 
 
-=== Finance example (XHTML)
+=== Invoicing setup page (XHTML)
 
 [source,html]
 ----
@@ -133,7 +142,7 @@ The following link:../../overview/#_topic_typing[task] instructs users how to cr
         </ul>
         <MadCap:snippetBlock src="../Resources/Snippets/AuthorizationViewsNote.flsnp" />
         <br />
-        <h2>Setup tasks  </h2>
+        <h2>Setup tasks</h2>
         <ol>
             <li>
                 <p><a href="InvoicingRule.htm"><a href="InvoicingAuthorizations.htm">Grant invoicing authorizations to appropriate users and/or groups</a></a> (<em>required</em>)</p>
@@ -157,9 +166,7 @@ The following link:../../overview/#_topic_typing[task] instructs users how to cr
     </body>
 ----
 
-=== Finance example (XHTML) 
-
-Complex workflow. 
+=== Match a supplier invoice (XHTML)
 
 [source,HTML]
 ----
@@ -167,7 +174,7 @@ Complex workflow.
     <h1>Match a supplier invoice</h1>
     <h2 MadCap:conditions="cp.EnglishOnly">Overview</h2>
     <p>
-        Automatically check for discrepancies between billed and received goods by matching a supplier invoice to a purchase order (<a href="#Match">two-way match</a>) or receipt (<a href="#Match2">three-way match</a>). Once a supplier invoice is matched, its state updates to Matched and a read-only Linked invoice is created in <b>Invoicing &gt;&#160;Invoices</b>.</p>
+        Automatically check for discrepancies between billed and received goods by matching a supplier invoice to a purchase order (<a href="#Match">two-way match</a>) or receipt (<a href="#Match2">three-way match</a>). Once a supplier invoice is matched, its state updates to Matched and a read-only Linked invoice is created in <b>Invoicing &gt; Invoices</b>.</p>
     <p>
         If discrepancies are found within your <a href="AutoInvoiceProcessRules.htm#If">configured tolerance limits</a>, they are automatically reconciled and the difference is inserted as a balancing line item on the PO. If discrepancies exceed your configured tolerance limits, you are prompted to resolve them manually.
     </p>
@@ -193,16 +200,16 @@ Complex workflow.
     <h3>Match to a PO (two-way match)</h3>
     <ul>
         <li>
-            <p><b>Homepage &gt;&#160;To do &gt;&#160;Your POs to match</b>
+            <p><b>Homepage &gt; To do &gt; Your POs to match</b>
             </p>
         </li>
         <li>
-            <p><b>Procurement &gt;&#160;POs</b>
+            <p><b>Procurement &gt; POs</b>
             </p>
         </li>
     </ul>
     <h3>Match to a receipt (three-way match)</h3>
-    <p><b>Procurement &gt;&#160;Receipts</b>
+    <p><b>Procurement &gt; Receipts</b>
     </p>
     <h2>
         <a name="Match"></a>Match a supplier invoice to a PO</h2>
@@ -234,30 +241,25 @@ Complex workflow.
 </html>
 ----
 
-=== Asciidoc example
-
-The following code sample is _fictional_ documentation to help users configure notifications in their RTFM-Industries software.
+=== Configure notifications (AsciiDoc) 
 
 [source,asciidoc]
 ----
 == Add or edit notification
 
-. Click *+New Notification* or edit an existing notification rule by clicking on it.
+. Click **+New Notification** or edit an existing notification rule by clicking on it.
 . Complete the following fields:
 .. Name
 .. Email Addresses to receive notification
 .. Enable notifications for documentation request: when enabled, this setting will send an alert to the closet tech writer (day or night)
-. *Save*.
+. **Save**.
 
 == Disable a notification
 
-To disable a notification, select it for edit, then check the Disabled
+To disable a notification, select it for edit, then check the **Disabled**
 checkbox at the top of the form.
 
 == Delete a notification
 
-To delete a notification, select it for edit, then click
-*Delete*.
+To delete a notification, select it for edit, then click *Delete*.
 ----
-
-
