--- a/content/writingsamples/feature.adoc
+++ b/content/writingsamples/feature.adoc
@@ -17,63 +17,9 @@ Explain RTFM-Industries...
 View feature documentation for the fictional RTFM-Industries Documentation Dashboard feature.
 The following link:../../overview/#_topic_typing[concept documentation] introduces RTFM-Industries Documentation Dashboards, a splendid feature that helps tech writers do their jobs more effectively.
 
-NOTE: USE `INCLUDES::` to pull in this file...
-
-includes::https://github.com/technicallyawriter/portfolio/content/writing-samples/source/documentation-dashboards-overview.html[]
-
-[source,HTML]
+[,html]
 ----
-<body>
-    <h1>RTFM-Industries Documentation Dashboards</h1>
-    <p>
-        RTFM-Industries Documentation Dashboards provides technical writers with visualized data to track documentation requests. Each dashboard tracks the following metrics:
-    </p>
-    <ul>
-        <li>Reuests for new feature documentation</li>
-        <li>Request for documentation bug fixes</li>
-        <li>Percentage of documentation completed per project</li>
-    </ul>
-    <figure>
-        <img src=" ../images/best-practice-documentation-dashboards.png " alt="image of RTFM-Industries Documentation Dashboards " />
-        <figcaption>RTFM-Industries Documentation Dashboards</figcaption>
-    </figure>
-    <p>
-        Within each dashboard, a tech writer can learn more about each data point by clicking on it. Requests are color-coded to signify priority:</p>
-    <ul>
-        <li>
-          <span class="red-txt">Red</span> = you forgot to write the documentation and everyone knows it
-        </li>
-        <li>
-          <span class="yellow-txt">Yellow</span> = you've successfully pushed the deadline back by pretending to be sick</li>
-        <li>
-          <span class="green-txt">Green</span> = you've got PLENTY of time to write the docs (as long as nothing goes wrong)
-        </li>
-    </ul>
-        <p>To adjust these priorities, see the <a href="adjust-doc-priority.htm">Adjusting Documentation Priorities</a> section.</p>
-    <h2>Export Documentation Dashboards</h2>
-    <p>RTFM-Industries Dashboard tiles can be exported into the following file type: (Excel, PDF, RTF, CSV).</p>
-        <p>
-        <span class="note">
-        <span class="bold">Note:</span>
-            All RTFM-Industries Documentation Dashboards are fully HTML5 and do not require Microsoft Silverlight.
-        </span>
-        </p>
-        <h2>Prerequisites &amp; licensing</h2>
-        <ul>
-            <li>SaaS client</li>
-            <li>
-                <a href="request-RTFM-Industries-dashboards.htm">
-                Request the RTFM-Industries Documentation Dashboard feature
-                </a>
-            </li>
-            <li>User assigned the Tech Writer <a href="../sys-admin/roles/tech-writer-power-user">power user role</a></li>
-        </ul>
-        <h2>Navigation Path</h2>
-        <p>Home &gt; Dashboards</p>
-        <h2>Next steps</h2>
-        <p><a href="create-doc-dashboard.htm">Create a new Documentation Dashboard</a>
-        </p>
-</body>
+include::./content/writingsamples/source/documentation-dashboards-overview.html[]
 ----
 
 == Task-oriented feature docs
@@ -82,184 +28,29 @@ includes::https://github.com/technicallyawriter/portfolio/content/writing-sample
 
 The following link:../../overview/#_topic_typing[task] instructs users how to create a new Documentation Dashboard that evaluates the effectiveness of published documentation.
 
-[source,HTML]
+[,html]
 ----
-<body>
-    <h1>Create a new Documentation Dashboard</h1>
-    <p>The creation of a custom Documentation Dashboard helps to visualize the effectiveness of published documentation based on topic type (concept, task, reference).
-    </p>
-    <h2>Prerequisites</h2>
-    <p><a href="doc-dashboards-prerequisites">Prerequisites</a></p>
-    <h2>Navigation Path</h2>
-    <p>Home &gt; Dashboards &gt; Create New </p>
-    <h2>Task</h2>
-    <ol>
-        <li>Click <span class="bold">Add Report</span>.</li>
-        <li>From the Report Type dropdown, select a topic type and enable the chekbox next to each documentation file you want to evaluate:</li>
-        <li>Specify a report code, name, and description</li>
-        <p><span class="note"><span class="bold">Note:</span>Report code must be unique</span>
-        </p>
-        <li>Build the report by dragging and dropping data objects, noting the following about Categories, Sorts, Filters, and Layout tabs:</li>
-        <ol>
-            <li><span class="bold">Categories:</span> Allows the user to select the data categories (RTFM-Industries tables) that should be accessible on the report. One or more categories must be selected and will determine the fields that are available to select on the other tabs.
-                <br /><span class="note "><span class="bold ">Note:</span> Users will see the tables they're permissioned to access.</span><br /></li>
-            <li><span class="bold">Sorts:</span> Allows the user to select one or more data fields used to sort the data. This is optional</li>
-            <li><span class="bold">Filters:</span> Allows the user to select one or more data fields used to filter the data. This is optional</li>
-            <li><span class="bold">Layout:</span> Allows the user to select and order the data fields that should display on the report</li>
-        </ol>
-        <li>To subscribe others to this Documentation Dashboard, enter their email address in the <span class="bold">Subscriber</span> field.</li>
-        <li>Click <span class="bold">Save</span> when finished.<li>
-        <p><span class="bold">Result:</span> the Documentation Dashboard is added to the list in the bottom panel.
-    </ol>
-    <h2>Next Steps</h2>
-    <p>
-        <a href="reports-promote-global.htm ">Promote a Documentation Dashboard to Global</a>
-    </p>
-</body>
----- 
+include::./content/writingsamples/source/documentation-dashboards-create.html[]
+----
 
 === Invoicing setup page (XHTML)
 
-[source,html]
+[,html]
 ----
-    <body>
-        <h1>Invoicing setup</h1>
-        <h2>Overview</h2>
-        <p>Complete the following administrator setup tasks to configure rules and settings to automate common invoice processing workflows that align with your organization's rules and preferences. Additionally, ensure the appropriate users are granted your preferred invoicing authorization. </p>
-        <h2>Prerequisites</h2>
-        <ul>
-            <li>
-                <p><a href="../Organization/SetUpOrganization.htm">Organization setup</a>
-                </p>
-            </li>
-            <li>
-                <p><a href="../Organization/SetUpNewUser.htm">User setup</a>
-                </p>
-            </li>
-            <li>
-                <p>Administrator authorization</p>
-            </li>
-        </ul>
-        <MadCap:snippetBlock src="../Resources/Snippets/AuthorizationViewsNote.flsnp" />
-        <br />
-        <h2>Setup tasks</h2>
-        <ol>
-            <li>
-                <p><a href="InvoicingRule.htm"><a href="InvoicingAuthorizations.htm">Grant invoicing authorizations to appropriate users and/or groups</a></a> (<em>required</em>)</p>
-            </li>
-            <li>
-                <p><a href="InvoicingRule.htm">Configure invoicing rules</a> (<em>required</em>)</p>
-            </li>
-            <li>
-                <p><a href="InvoiceAssignmentRule.htm">Configure supplier invoice assignment rules</a> (<em>recommended</em>)</p>
-            </li>
-            <li>
-                <p><a href="AutoInvoiceProcessRules.htm">Configure automatic invoice processing rules</a> (<em>required for No-PO invoice workflow</em>)</p>
-            </li>
-            <li>
-                <p><a href="EnableAutoInvoiceMatching.htm">Enable automatic invoice matching</a> (<em>recommended</em>)</p>
-            </li>
-            <li>
-                <p><a href="InvoicingGeneralSettings.htm">Configure invoicing general settings</a> (<em>recommended</em>)</p>
-            </li>
-        </ol>
-    </body>
+include::./content/writingsamples/source/invoicing-setup.html[]
 ----
 
 === Match a supplier invoice (XHTML)
 
-[source,HTML]
+[,html]
 ----
-<body>
-    <h1>Match a supplier invoice</h1>
-    <h2 MadCap:conditions="cp.EnglishOnly">Overview</h2>
-    <p>
-        Automatically check for discrepancies between billed and received goods by matching a supplier invoice to a purchase order (<a href="#Match">two-way match</a>) or receipt (<a href="#Match2">three-way match</a>). Once a supplier invoice is matched, its state updates to Matched and a read-only Linked invoice is created in <b>Invoicing &gt; Invoices</b>.</p>
-    <p>
-        If discrepancies are found within your <a href="AutoInvoiceProcessRules.htm#If">configured tolerance limits</a>, they are automatically reconciled and the difference is inserted as a balancing line item on the PO. If discrepancies exceed your configured tolerance limits, you are prompted to resolve them manually.
-    </p>
-    <p><b>Additional processing options</b>
-    </p>
-    <p>To request information or record an invoice exception, see the <a href="#Addition">Additional processing options</a> section. </p>
-    <h2>Prerequisites</h2>
-    <ul>
-        <li>
-            <p><a href="InvoicingSetup.htm">Invoicing setup</a>
-            </p>
-        </li>
-        <li>
-            <p>Supplier invoice in <i>To match</i> state</p>
-        </li>
-        <li>
-            <p>Invoice matching or Invoice entering authorization depending on organization configuration</p>
-            <MadCap:snippetBlock src="../Resources/Snippets/AuthorizationViewsNote.flsnp" />
-        </li>
-    </ul>
-    <h2>Location</h2>
-    <p>Depending on where you are in the procure-to-pay process, you can match an invoice in the following locations:</p>
-    <h3>Match to a PO (two-way match)</h3>
-    <ul>
-        <li>
-            <p><b>Homepage &gt; To do &gt; Your POs to match</b>
-            </p>
-        </li>
-        <li>
-            <p><b>Procurement &gt; POs</b>
-            </p>
-        </li>
-    </ul>
-    <h3>Match to a receipt (three-way match)</h3>
-    <p><b>Procurement &gt; Receipts</b>
-    </p>
-    <h2>
-        <a name="Match"></a>Match a supplier invoice to a PO</h2>
-    <p>Create a supplier invoice from a PO&#160;and check for discrepancies with a 2-way match. PO must be in <i>Sent</i> state.</p>
-    <MadCap:snippetBlock src="../Resources/Snippets/Invoicing/MatchSupplierInvoiceToPO.flsnp" />
-    <h2>
-        <a name="Match2"></a>Match a supplier invoice to a receipt</h2>
-    <p>Check for discrepancies with a 3-way match between a supplier invoice, PO and receipt.</p>
-    <MadCap:snippetBlock src="../Resources/Snippets/Invoicing/MatchSupplierInvoiceToReceipt.flsnp" />
-    <h2>
-        <a name="Addition"></a>Additional processing options</h2>
-    <p>When a supplier invoice is in the <i>To match</i> state, a user has the following processing options that appear above the state machine. </p>
-    <h3>Request information</h3>
-    <p>To request additional information regarding a supplier invoice click the <b>Request info</b> button above the state machine. The point of contact user is notified by email. </p>
-    <h4>Provide instructions to the point of contact</h4>
-    <div class="note">
-        <p class="note"><b>Note:</b> the supplier invoice must be in To match state to provide instructions to the point of contact.</p>
-    </div>
-    <p>Any active user can be assigned as a point of contact, and a default point of contact can be configured in <b>General Settings &gt; Invoicing</b>. You can provide instructions for the point of contact <em>either</em> manually on the invoice or automatically through a configured <a href="AutoInvoiceProcessRules.htm">automatic invoice processing rule</a>. </p>
-    <p>To manually provide instructions, <b>Edit</b> the supplier invoice, type into the "Instructions for point of contact" field and <b>Save</b>. These instructions and the assigned point of contact appear in the <i>Invoicing processing</i> tab. </p>
-    <h3>Unassign an invoice</h3>
-    <p>To handle an invoice exception found while matching, assign the proper user to the supplier invoice in the <i>Invoice processing</i> tab and click the <b>Unassign</b> button above the state machine. The user assigned to the supplier invoice is notified by email and the supplier invoice returns to the To assign state for reprocessing. </p>
-    <h2>See also</h2>
-    <p><a href="AssignSupplierInvoice.htm">Assign a supplier invoice</a>
-    </p>
-    <p><a href="SupplierInvoiceNoPO.htm">No-PO invoicing</a>
-    </p>
-</body>
-</html>
+include::./content/writingsamples/source/match-invoice.html[]
 ----
 
 === Configure notifications (AsciiDoc) 
 
-[source,asciidoc]
+[,asciidoc]
 ----
-== Add or edit notification
-
-. Click **+New Notification** or edit an existing notification rule by clicking on it.
-. Complete the following fields:
-.. Name
-.. Email Addresses to receive notification
-.. Enable notifications for documentation request: when enabled, this setting will send an alert to the closet tech writer (day or night)
-. **Save**.
-
-== Disable a notification
-
-To disable a notification, select it for edit, then check the **Disabled**
-checkbox at the top of the form.
-
-== Delete a notification
-
-To delete a notification, select it for edit, then click *Delete*.
+include::./content/writingsamples/source/notification-config.adoc[lines=4..-1]
 ----
+
