adjust frontmatter; move examples

--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -1,12 +1,4 @@
----
-title: "Agile methodology"
-draft: false
-weight: 10
-date: "2022-01-10"
----
-:toc:
-
-== Agile methodology
+= Agile methodology
 
 I'm an Agile advocate who believes in team-created definitions and protocols that measure out bite-size chunks of work with testable acceptance criteria.
 
