--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -1,12 +1,5 @@
----
-title: "Docs-as-code"
-draft: false
-weight: 5
-date: "2023-10-21"
----
-:toc:
-
-== Docs-as-code
+= Docs-as-code
+:navtitle: Docs-as-code
 
 Modern tech writing practices should mimic software development processes and tooling, when appropriate. This approach leads to more scalable, collaborative documentation.
 
