--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,8 +4,6 @@ Hi, I'm Parker! Welcome to my tech writing portfolio.
 
 I'm an experienced tech writer who's worked in the Financial and Facility Management industries for over six years. 
 
-As a self-taught Linux power user, I know the importance of quality documentation and how painful it is to be stuck with lacking instructions. "User empathy" is an overused buzzword, but let's just say I've suffered through enough poorly documented open source software for it to dramatically inform my tech writing approach.  
-
 == Docs-as-code
 
 I prefer to treat my docs like source code. Using modern software development processes and tooling makes it possible to produce modular, reviewed, and accessible documentation at scale. Goodbye 500+ page Microsoft Word documents, hello pull requests that kick off continous deployment.
@@ -18,9 +16,14 @@ From years of implementing Agile, I've learned the value of proper ticket manage
 
 I believe it's often harder to write a single clear sentence than a paragraph of jumbled jargon. The challenge of tech writing is to translate the complexity of software into manageable concepts and tasks.
 
+
+== User empathy
+
+As a self-taught Linux power user, I know the importance of quality documentation and how painful it is to be stuck with lacking instructions. "User empathy" is an overused buzzword, but let's just say I've suffered through enough poorly documented open source software for it to dramatically inform my tech writing approach.  
+
 == Tooling
 
-todo...
+image::docs-as-code.jpeg[docs-as-code]
 
 == The perils of technical writing 
 
