--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -21,10 +21,8 @@ I believe it's often harder to write a single clear sentence than a paragraph of
 
 As a self-taught Linux power user, I know the importance of quality documentation and how painful it is to be stuck with lacking instructions. "User empathy" is an overused buzzword, but let's just say I've suffered through enough poorly documented open source software for it to dramatically inform my tech writing approach.  
 
-== Tooling
-
-image::docs-as-code.jpeg[docs-as-code]
-
-== The perils of technical writing 
-
 I enjoy working in the middle of this spectrum, preferably not too far to the right!
+
+.The perils of technical writing
+[link: https://xkcd.com/1343/]
+image::manuals.png[xkcd comic about how manuals can be so confusing they need their own manual, thus creating more problems for users.]
