--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -15,11 +15,11 @@ Goodbye 500+ page Microsoft Word documents; hello pull requests that kick off co
 
 Years of implementing Agile has taught me the value of proper ticket management, clear acceptance criteria, tight feedback loops with SMEs/shareholders, and the important of periodic reflection on how things are done.
 
-== Simple language image:icons/edit.png[hand holding a pen,50,50
+== Simple language image:icons/edit.png[hand holding a pen,50,50]
 
 I believe it's often harder to write a single clear sentence than a paragraph of jumbled jargon. The challenge of tech writing is to translate the complexity of software into manageable concepts and tasks.
 
-== User empathy
+== User empathy image:icons/user.png[confused user,50,50]
 
 As a self-taught Linux power user, I know the importance of quality documentation and how painful it is to be stuck with lacking instructions. "User empathy" is an overused buzzword, but let's just say I've suffered through enough poorly documented open source software for it to dramatically inform my tech writing approach.  
 
