--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -1,4 +1,5 @@
 = Docs-as-code
+:source-highlighter: rouge
 
 Modern tech writing practices should mimic software development processes and tooling, when appropriate. This approach leads to more scalable, collaborative documentation.
 
@@ -11,17 +12,17 @@ Whether working alone or on a team, proper version control is a must.
 As a general rule, [branch]`master` branch should always contain production-ready code. This means that documentation for upcoming releases get worked in feature branches that are typically scoped at the xref:agile.adoc[Epic or Feature level]. 
 
 .Feature branching (simple) 
-image::feature-branching-simple.png[Feature branches without release branch,150]
+image::feature-branching-simple.png[Feature branches without release branch]
 
 Branching in this way is more straight-forward the more frequent a company's release schedule is. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into. 
 
 .Feature branching with a release branch
-image::feature-branching-release.png[Feature branches with release branch,150]
+image::feature-branching-release.png[Feature branches with release branch]
 
 Branching like this makes writing release notes for service packs and hotfixes simple, as these docs are just another feature branch. 
 
 .Feature branching with release and hotfix branches
-image::feature-branching-release-hotfix.png[Feature branches with release and hotfix branch,150]
+image::feature-branching-release-hotfix.png[Feature branches with release and hotfix branch]
 
 === Naming conventions
 
