update source highlighter

--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -1,5 +1,5 @@
 = Docs-as-code
-:source-highlighter: rouge
+:source-highlighter: highlight.js 
 
 Modern tech writing practices should mimic software development processes and tooling, when appropriate. This approach leads to more scalable, collaborative documentation.
 
